toggle-slider applied

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </div>
         <div class="billing-period">
           <p>Monthly Billing</p>
-          <label for="" class="switch">
+          <label for="billing" class="switch">
             <input type="checkbox" name="billing" id="billing" />
-            <span class="toggle-button"></span>
+            <span class="toggle-slider"></span>
           </label>
           <p>Yearly Billing</p>
           <span class="discount">-25%</span>
