--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -26,19 +24,19 @@
     <main>
       <div class="paying-condition">
         <span class="views">100K PAGEVIEWS</span>
-        <form class="pricing-card">
+        <div class="slide-container">
           <input
             type="range"
             id="vol"
             name="vol"
-            min="1"
-            max="5"
-            value="3"
+            min="0"
+            max="4"
+            value="2"
             step="1"
           />
-        </form>
+        </div>
         <div class="price-component">
-          <span class="price">$16.00</span>
+          <p>$<span class="price">16.00</span></p>
           <span class="month">/month</span>
         </div>
         <div class="billing-period">
