added "view" change to slider event

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </header>
     <main>
       <div class="paying-condition">
-        <span class="views">100K PAGEVIEWS</span>
+        <div class="pageviews">
+          <p class="views">100K</p>
+          <span> PAGEVIEWS</span>
+        </div>
         <div class="slide-container">
           <input
             type="range"
