desktop mark-up

--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
       <p>Sign-up for our 30-day trial. No credit card required.</p>
     </header>
     <main>
-      <div class="paying-condition">
-        <div class="pageviews">
-          <p class="views">100K</p>
-          <span> PAGEVIEWS</span>
+      <div class="view-price">
+        <div class="paying-condition">
+          <div class="pageviews">
+            <p class="views">100K</p>
+            <span> PAGEVIEWS</span>
+          </div>
+          <div class="mobile">
+            <p>$<span class="price">16.00</span></p>
+            <span class="month">/month</span>
+          </div>
         </div>
         <div class="slide-container">
           <input
@@ -38,7 +44,7 @@
             step="1"
           />
         </div>
-        <div class="price-component">
+        <div class="desktop">
           <p>$<span class="price">16.00</span></p>
           <span class="month">/month</span>
         </div>
@@ -49,7 +55,11 @@
             <span class="toggle-slider"></span>
           </label>
           <p>Yearly Billing</p>
-          <span class="discount">-25%</span>
+          <di class="discount">
+            <span class="for-mobile">-</span>
+            <span>25%</span>
+            <span class="for-desktop">discount</span>
+          </di>
         </div>
       </div>
       <div class="line"></div>
