updated js file for mobile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           />
         </div>
         <div class="desktop">
-          <p>$<span class="price">16.00</span></p>
+          <p>$<span class="price-mobile">16.00</span></p>
           <span class="month">/month</span>
         </div>
         <div class="billing-period">
